--- a/src/app/component/update/update.component.html
+++ b/src/app/component/update/update.component.html
@@ -1,5 +1,5 @@
 <form>
-    <h1>Criando novo To-do</h1>
+    <h1>Atualizando o To-do</h1>
 
     <mat-form-field class="data-finalizar" appearance="fill">
         <mat-label>Data para Finalizar</mat-label>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="buttons">
-        <button (click)="create()" mat-stroked-button color="primary">Criar</button>
+        <button (click)="update()" mat-stroked-button color="primary">Atualizar</button>
         <button (click)="cancel()" mat-stroked-button color="warn">Cancelar</button>
     </div>
 </form>
